duplicate tests for apache 5