@@ -1,21 +1,29 @@
 package com.sap.cloud.sdk.cloudplatform.connectivity;
 
+import static com.github.tomakehurst.wiremock.client.WireMock.anyUrl;
+import static com.github.tomakehurst.wiremock.client.WireMock.equalTo;
+import static com.github.tomakehurst.wiremock.client.WireMock.get;
+import static com.github.tomakehurst.wiremock.client.WireMock.getRequestedFor;
+import static com.github.tomakehurst.wiremock.client.WireMock.ok;
+import static com.github.tomakehurst.wiremock.core.WireMockConfiguration.wireMockConfig;
+import static com.github.tomakehurst.wiremock.stubbing.Scenario.STARTED;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicLong;
 
+import com.github.tomakehurst.wiremock.junit5.WireMockExtension;
+import lombok.SneakyThrows;
 import org.apache.hc.client5.http.classic.HttpClient;
 import org.apache.hc.client5.http.classic.methods.HttpGet;
-import org.apache.hc.core5.http.ClassicHttpRequest;
-import org.apache.hc.core5.http.message.BasicHeader;
+import org.apache.hc.client5.http.impl.classic.BasicHttpClientResponseHandler;
+import org.jspecify.annotations.NonNull;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
@@ -30,6 +38,10 @@ import com.sap.cloud.sdk.testutil.TestContext;
 
 class DefaultApacheHttpClient5CacheTest
 {
+    @RegisterExtension
+    static final WireMockExtension WIRE_MOCK_SERVER =
+        WireMockExtension.newInstance().options(wireMockConfig().dynamicPort()).build();
+
     private static final List<Tenant> TENANTS =
         Arrays.asList(new DefaultTenant("tenant#1"), new DefaultTenant("tenant#2"), null);
     private static final List<Principal> PRINCIPALS =
@@ -348,49 +360,90 @@ class DefaultApacheHttpClient5CacheTest
     }
 
     @Test
-    //This is a known limitation of excluding header providers in the equality check of destinations
-    void testGetClientReturnsSameClientForDestinationsWithOnlyDifferentHeaderProviders()
+    @SneakyThrows
+    void testCachedEqualHttpClientsClosingBehavior()
     {
-        final Header header1 = new Header("foo", "bar");
-        final Header header2 = new Header("foo1", "bar1");
+        WIRE_MOCK_SERVER.stubFor(get(anyUrl()).willReturn(ok()));
 
-        final DefaultHttpDestination firstDestination =
+        final DefaultHttpDestination destination1 =
             DefaultHttpDestination
-                .builder("http://some-uri")
-                .headerProviders(( any ) -> Collections.singletonList(header1))
+                .builder(WIRE_MOCK_SERVER.baseUrl())
+                .headerProviders(c -> List.of(new Header("Authorization", "Bearer old")))
+                .build();
+        final DefaultHttpDestination destination2 =
+            DefaultHttpDestination
+                .builder(WIRE_MOCK_SERVER.baseUrl())
+                .headerProviders(c -> List.of(new Header("Authorization", "Bearer new")))
                 .build();
 
-        final DefaultHttpDestination secondDestination =
-            DefaultHttpDestination
-                .fromDestination(firstDestination)
-                .headerProviders(( any ) -> Collections.singletonList(header2))
-                .build();
+        final HttpClient client1 = sut.tryGetHttpClient(destination1, FACTORY).get();
+        assertThat(((ApacheHttpClient5Wrapper) client1).getDestination()).isSameAs(destination1);
+        final HttpClient client2 = sut.tryGetHttpClient(destination2, FACTORY).get();
+        assertThat(((ApacheHttpClient5Wrapper) client2).getDestination()).isSameAs(destination2);
 
-        final ApacheHttpClient5Wrapper client1 =
-            (ApacheHttpClient5Wrapper) sut.tryGetHttpClient(firstDestination, FACTORY).get();
-        final ApacheHttpClient5Wrapper client2 =
-            (ApacheHttpClient5Wrapper) sut.tryGetHttpClient(secondDestination, FACTORY).get();
+        // Note: Destinations are now equal even with different header providers, since header providers
+        // are not part of the equality check. However, they are different instances, so they result in
+        // different HTTP clients due to the cache key being based on instance identity.
+        assertThat(destination1).isNotSameAs(destination2);
 
-        assertThat(client1.getDestination()).isSameAs(firstDestination);
-        assertThat(client2.getDestination()).isSameAs(secondDestination);
+        // Http clients are distinct instances, since the cache key contains the destination reference and not its content
+        assertThat(client1).isNotSameAs(client2);
 
-        final ClassicHttpRequest request1 = client1.wrapRequest(new HttpGet("/"));
-        final ClassicHttpRequest request2 = client2.wrapRequest(new HttpGet("/"));
+        // When using the exact same destination object, the same http-client wrapper should be returned
+        final HttpClient client1Again = sut.tryGetHttpClient(destination1, FACTORY).get();
+        assertThat(client1Again).isSameAs(client1);
+        assertThat(((ApacheHttpClient5Wrapper) client1Again).getDestination()).isSameAs(destination1);
 
-        final List<org.apache.hc.core5.http.Header> headersRequest1 = new ArrayList<>();
-        final List<org.apache.hc.core5.http.Header> headersRequest2 = new ArrayList<>();
-        request1.headerIterator().forEachRemaining(headersRequest1::add);
-        request2.headerIterator().forEachRemaining(headersRequest2::add);
+        // simulate garbage collection on client1
+        ((ApacheHttpClient5Wrapper) client1).close();
 
-        // recursive comparison because BasicHeader doesn't implement equals/hashCode
-        assertThat(headersRequest1)
-            .usingRecursiveFieldByFieldElementComparator()
-            .containsExactly(new BasicHeader(header1.getName(), header1.getValue()));
-        assertThat(headersRequest2)
-            .usingRecursiveFieldByFieldElementComparator()
-            .containsExactly(
-                new BasicHeader(header1.getName(), header1.getValue()),
-                new BasicHeader(header2.getName(), header2.getValue()));
+        // since client1 did not inherit client2 connection manager, client2 is not shut down
+        client2.execute(new HttpGet("/"), new BasicHttpClientResponseHandler());
+        WIRE_MOCK_SERVER.verify(1, getRequestedFor(anyUrl()));
+    }
+
+    @Test
+    @SneakyThrows
+    void testCachedDestinationIsReused()
+    {
+        WIRE_MOCK_SERVER
+            .stubFor(
+                get(anyUrl())
+                    .withHeader("Authorization", equalTo("Bearer token1"))
+                    .inScenario("Refreshing token")
+                    .whenScenarioStateIs(STARTED)
+                    .willReturn(ok())
+                    .willSetStateTo("First token sent"));
+        WIRE_MOCK_SERVER
+            .stubFor(
+                get(anyUrl())
+                    .withHeader("Authorization", equalTo("Bearer token2"))
+                    .inScenario("Refreshing token")
+                    .whenScenarioStateIs("First token sent")
+                    .willReturn(ok()));
+
+        final DefaultHttpDestination destination =
+            DefaultHttpDestination.builder(WIRE_MOCK_SERVER.baseUrl()).headerProviders(c -> getHeaders()).build();
+
+        // token1 is sent
+        final HttpClient client1 = sut.tryGetHttpClient(destination, FACTORY).get();
+        client1.execute(new HttpGet("/"), new BasicHttpClientResponseHandler());
+        WIRE_MOCK_SERVER.verify(1, getRequestedFor(anyUrl()).withHeader("Authorization", equalTo("Bearer token1")));
+
+        // token2 is sent
+        final HttpClient client2 = sut.tryGetHttpClient(destination, FACTORY).get();
+        client2.execute(new HttpGet("/"), new BasicHttpClientResponseHandler());
+        WIRE_MOCK_SERVER.verify(1, getRequestedFor(anyUrl()).withHeader("Authorization", equalTo("Bearer token2")));
+
+        // Because the destination is cached, the same client is reused
+        assertThat(client1).isSameAs(client2);
+    }
+
+    private int count = 1;
+
+    private @NonNull List<Header> getHeaders()
+    {
+        return List.of(new Header("Authorization", "Bearer token" + count++));
     }
 
     @Test
